tests: Fix deprecation warnings